public record SeasonalDisasters(
    boolean isDrought,
    boolean isFrost,
    boolean isFlood,
    boolean hasLocusts
) {}
