package enums;

public enum GroundHazard {
    FROST,
    DROUGHT,
    FLOOD,
    LOCUSTS,
    NONE
}
