package enums;

public enum SocialStatus {
    POOR,
    RICH,
    ROYAL
}
