package interfaces;

public interface Holdable {
    void hold();
}
