package interfaces;

public interface Ringable {
    void ring();
}
